Aligning many chunks